added blog page + fif full landing

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -529,13 +529,17 @@
     }
   }
 }
-.header__search{
+.header__menu-form{
   max-width: 360px;
+  width: 100%;
+}
+.header__search{
+  width: 100%;
   text-align: center;
   position: relative;
   input{
     display: block;
-    min-width: 340px;
+    width: 100%;
     height: 46px;
     border-radius: 30px;
     border: 1px solid #dbe1e6;
@@ -2159,8 +2163,9 @@
   }
   .jq-checkbox{
     margin-right: 10px;
-    width: 11px;
+    width: 10.5px;
     height: 11px;
+    position: relative;
     border-radius: 50%;
     border: 1px solid #747b86;
     &.focused{
@@ -2172,10 +2177,12 @@
   .jq-checkbox.checked .jq-checkbox__div{
     width: 6px;
     height: 6px;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
     border-radius: 50%;
     background-color: #747b86;
-    margin-left: 1.5px;
-    margin-top: 2px;
   }
 }
 .aside-price__range {
@@ -2765,84 +2772,86 @@
     }
   }
 }
+
 .single-product__details{
   width: 750px;
   box-shadow: 0 2px 4px rgba(108, 111, 115, 0.1);
   border-radius: 4px;
   background-color: #ffffff;
-}
-.tabs{
-  text-align: center;
-  display: flex;
-  .tab{
-    padding: 30px 15px;
-    cursor: pointer;
-    display: block;
-    max-width: 200px;
-    width: 100%;
-    border-bottom: 1px solid  #e8e8e8;;
-    &  + .tab{
-      border-left: 1px solid  #e8e8e8;;
-    }
-    &.active{
-      border-top: 3px solid $blue;
-      border-bottom: none;
-    }
-    span{
-      @include f500;
-      margin-left: 3px;
-    }
-  }
-}
-.tab_content{
-  padding: 100px 30px 50px;
-  .tab-item__title{
-    font-size: 28px;
-    color: #000;
-    margin-bottom: 30px;
-  }
-  p, .tab-item__text{
-    color: $text;
-    margin-bottom: 50px;
-  }
-  .tab-item__list{
-    margin-bottom: 50px;
-    li{
-      color: $text;
-      position: relative;
-      align-items: center;
-      padding-left: 30px;
-      margin-bottom: 5px;
-      &:before{
-        position: absolute;
-        font-size: 13px;
-        color: #000;
-        left: 0;
-        top: 2px;
+  .tabs{
+    text-align: center;
+    display: flex;
+    .tab{
+      padding: 30px 15px;
+      cursor: pointer;
+      display: block;
+      max-width: 200px;
+      width: 100%;
+      border-bottom: 1px solid  #e8e8e8;;
+      &  + .tab{
+        border-left: 1px solid  #e8e8e8;;
+      }
+      &.active{
+        border-top: 3px solid $blue;
+        border-bottom: none;
+      }
+      span{
+        @include f500;
+        margin-left: 3px;
       }
     }
-    span{
-      font-family: 'Quicksand', sans-serif;
-      font-weight: 400;
-    }
   }
-  .tab-item__list-span{
-    span{
-      position: absolute;
-      left: 0;
-      color: #000000;
-      text-align: center;
-      @include f500;
+  .tab_content{
+    padding: 100px 30px 50px;
+    .tab-item__title{
+      font-size: 28px;
+      color: #000;
+      margin-bottom: 30px;
     }
-  }
-  img{
-    width: 100%;
-    height: 1000px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    p, .tab-item__text{
+      color: $text;
+      margin-bottom: 50px;
+    }
+    .tab-item__list{
+      margin-bottom: 50px;
+      li{
+        color: $text;
+        position: relative;
+        align-items: center;
+        padding-left: 30px;
+        margin-bottom: 5px;
+        &:before{
+          position: absolute;
+          font-size: 13px;
+          color: #000;
+          left: 0;
+          top: 2px;
+        }
+      }
+      span{
+        font-family: 'Quicksand', sans-serif;
+        font-weight: 400;
+      }
+    }
+    .tab-item__list-span{
+      span{
+        position: absolute;
+        left: 0;
+        color: #000000;
+        text-align: center;
+        @include f500;
+      }
+    }
+    img{
+      width: 100%;
+      height: 1000px;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
   }
 }
+
 .single-product__aside{
   width: 360px;
   margin-left: 30px;
@@ -2876,6 +2885,40 @@
     border-radius: 0 0 3px 3px;
     padding: 30px 30px 1px;
     background-color: #fff;
+    form{
+      label{
+        display: block;
+        margin-bottom: 20px;
+        cursor: pointer;
+        max-width: 150px;
+        width: 100%;
+      }
+      .jq-radio{
+        width: 20px;
+        vertical-align: text-top;
+        border-radius: 50%;
+        height: 20px;
+        margin-right: 10px;
+        border: 1px solid #c4c4c4;
+        position: relative;
+      }
+      .jq-radio__div{
+        &:before{
+          content: "\f00c";
+          font-size: 15px;
+          top: 115%;
+          position: absolute;
+          right: 50%;
+          margin-top: -12px;
+          transform: translate(50%, -50%);
+          color: #fff;
+          font-family: 'icomoon';
+        }
+      }
+      .jq-radio.checked{
+        background-color: $blue;
+      }
+    }
     .icon-shopping-cart{
       background-color: $fil;
       &:hover{
@@ -2915,6 +2958,7 @@
   }
   p, .aside-content__text{
     padding-left: 35px;
+    display: block;
     color: $text;
     padding-bottom: 30px;
     margin-bottom: 30px;
@@ -2926,6 +2970,7 @@
     height: 55px;
     background-color: $blue;
     margin-bottom: 30px;
+
     &:before{
       margin-right: 10px;
     }
@@ -3013,6 +3058,10 @@
 }
 .aside-author{
   text-align: center;
+  .aside-author__date{
+    margin-bottom: 20px;
+    display: block;
+  }
   .icon-twitter{
     background-color: #19b2f5;
   }
@@ -3045,26 +3094,25 @@
   color: #000;
   margin-bottom: 20px;
 }
-span, .aside-author__date{
-  margin-bottom: 20px;
-}
-.icon-futbol-o,
-.icon-twitter,
-.icon-facebook{
-  display: inline-block;
-  margin: 0 5px 30px;
-  width: 42px;
-  height: 42px;
-  border-radius: 50%;
-  position: relative;
-  text-align: center;
-  background-color: #395799;
-  &:before{
-    position: absolute;
-    top: 50%;
-    right: 50%;
-    transform: translate(50%, -50%);
-    color: #fff;
+.aside-author{
+  .icon-futbol-o,
+  .icon-twitter,
+  .icon-facebook{
+    display: inline-block;
+    margin: 0 5px 30px;
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    position: relative;
+    text-align: center;
+    background-color: #395799;
+    &:before{
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      transform: translate(50%, -50%);
+      color: #fff;
+    }
   }
 }
 .tab_content{
@@ -3232,6 +3280,7 @@ span, .aside-author__date{
   border-bottom: 1px solid #ececec;
 }
 .price-item__price{
+  margin-bottom: 20px;
   &>span{
     color: $text;
     display: inline-block;
@@ -3393,6 +3442,17 @@ span, .aside-author__date{
     }
   }
   form{
+    input{
+      width: 100%;
+      height: 50px;
+      background-color: #f4f5f8;
+      padding: 0 15px;
+      border: none;
+      margin-bottom: 30px;
+      &:placeholder{
+        padding: 0 15px;
+      }
+    }
     .jq-checkbox{
       width: 20px;
       vertical-align: text-top;
@@ -3602,8 +3662,6 @@ span, .aside-author__date{
     cursor: pointer;
   }
 }
-// end contact-us
-//start
 .contact-us__map{
   min-height: 400px;
   height: auto;
@@ -3614,5 +3672,252 @@ span, .aside-author__date{
     margin-bottom: -5px;
   }
 }
-
+// end contact-us
+//start blog
+.blog{
+  padding: 70px 0 100px;
+}
+.blog__inner{
+  display: flex;
+  justify-content: space-between;
+}
+.blog-content{
+  margin-right: 30px;
+  max-width: 750px;
+  width: 100%;
+  .pagination-list{
+    justify-content: flex-start;
+  }
+}
+.blog-content__item{
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(108, 111, 115, 0.1);
+  border-radius: 4px;
+  background-color: #ffffff;
+  margin-bottom: 40px;
+}
+.blog-item__img{
+  a{
+    border-radius: 4px 4px 0 0;
+    width: 100%;
+    height: 430px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+.blog-item__header{
+  padding: 40px 30px 30px;
+  border-bottom: 1px solid #ececec;
+}
+.blog-item__title{
+  font-size: 30px;
+  @include f500;
+  color: #000;
+  line-height: 34px;
+  cursor: pointer;
+  margin-bottom: 20px;
+  &:hover{
+    color: $blue;
+  }
+}
+.blog-item__panel{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  a{
+    color: $text;
+  }
+  .blog-item__panel-auth{
+    a{
+      width: 30px;
+      height: 30px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin-right: 20px;
+      border-radius: 50%;
+    }
+  }
+  .blog-item__panel-name{
+    color: $text;
+    margin-right: 20px;
+    a{
+      color: $blue;
+      margin-left: 5px;
+    }
+  }
+  .blog-item__panel-view,
+  .blog-item__panel-com,
+  .blog-item__panel-data{
+    padding-left: 25px;
+    margin-right: 20px;
+    position: relative;
+    &:before{
+      position: absolute;
+      font-size: 16px;
+      left: 0;
+      color: $text;
+    }
+  }
+}
+.blog-item__bottom{
+  padding: 30px 30px 40px;
+  .blog-bottom__text,p{
+    margin-bottom: 30px;
+  }
+  .links{
+    background-color: $blue;
+    text-align: center;
+    color: #fff;
+    &:hover{
+      background-color: $blue;
+      color: #fff;
+      transform: scale(1.05);
+    }
+  }
+}
+.blog-aside{
+  max-width: 360px;
+  width: 100%;
+}
+.blog-aside__item{
+  max-width: 100%;
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(108, 111, 115, 0.1);
+  border-radius: 4px;
+  background-color: #ffffff;
+  margin-bottom: 30px;
+  .header__menu-form{
+    padding: 30px 25px;
+  }
+}
+.blog-aside__title{
+  padding: 30px 25px;
+  @include f500;
+  font-size: 20px;
+  border-bottom: 1px solid #ececec;
+  color: #000;
+}
+.blog-aside{
+  .tabs{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #ececec;
+    .tab{
+      font-size: 20px;
+      @include f500;
+      padding: 30px 20px;
+      color: #000;
+      cursor: pointer;
+      &:hover{
+        color: $blue;
+      }
+    }
+  }
+  .tab-item{
+    padding: 0 25px;
+  }
+  .tabs-item{
+    padding: 20px 0;
+    border-bottom: 1px solid #ececec;
+    display: flex;
+    width: 100%;
+  }
+  .tabs-item__img{
+    height: 75px;
+    a{
+      width: 70px;
+      height: 100%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin-right: 15px;
+    }
+  }
+  .tabs-item__info{
+    position: relative;
+    .tabs-item__info-title{
+      color: #333;
+      display: block;
+      margin-bottom: 10px;
+      @include f500;
+      line-height: 24px;
+    }
+    .tabs-item__info-data{
+      display: block;
+      color: $text;
+      position: relative;
+      padding-left: 25px;
+      font-family: 'Quicksand', sans-serif;
+      font-weight: 400;
+      &:before{
+        font-size: 16px;
+        position: absolute;
+        left: 0;
+      }
+    }
+  }
+}
+.blog-aside__category{
+  padding: 0 25px;
+  .aside-category__list{
+    width: 100%;
+  }
+}
+.blog-aside__tags{
+  padding: 30px 25px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  a{
+    font-size: 15px;
+    transition: all .4s ease-out;
+    padding: 3px 14px;
+    border-radius: 15px;
+    color: $blue;
+    background-color: #eef5fe;
+    margin-right: 5px;
+    margin-top: 7px ;
+    &:last-child{
+      margin-right: 0;
+    }
+    &:hover{
+      color: #fff;
+      background-color: $blue;
+    }
+  }
+}
+.banner{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 4px;
+  opacity: 0.8;
+  position: relative;
+  background-color: #441c7c;
+  background-image: linear-gradient(to left, #002ed9 0%, #a900da 100%);
+  width: 360px;
+  height: 270px;
+  a{
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%);
+    color: #fff;
+    opacity: .6;
+    font-size: 36px;
+    line-height: 26px;
+    span{
+      display: block;
+      margin-top: 7px;
+      font-size: 16px;
+    }
+  }
+}
+// end blog
+//start
 @import "media";
