--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -33,7 +33,6 @@
 }
 
 
-
 .icon-search:before {
   content: "\f002";
 }
@@ -130,6 +129,15 @@
 .icon-users:before {
   content: "\f0c0";
 }
+.icon-bars:before {
+  content: "\f0c9";
+}
+.icon-navicon:before {
+  content: "\f0c9";
+}
+.icon-reorder:before {
+  content: "\f0c9";
+}
 .icon-magic:before {
   content: "\f0d0";
 }
@@ -225,4 +233,10 @@
 }
 .icon-user-o:before {
   content: "\f2c0";
+}
+.icon-times-rectangle-o:before {
+  content: "\f2d4";
+}
+.icon-window-close-o:before {
+  content: "\f2d4";
 }
