--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -87,6 +87,9 @@
   .avatar{
     width: 50px;
     height: 50px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 50%;
     margin-right: 20px;
   }
@@ -548,7 +551,7 @@
     padding-left: 25px;
     padding-right: 80px;
   }
-  button{
+  a,button{
     position: absolute;
     width: 70px;
     height: 46px;
@@ -559,12 +562,24 @@
     outline: none;
     background-color: $blue;
     cursor: pointer;
-    &:before{
-      content: "\f002";
-      font-size: 15px;
-      font-family: 'icomoon';
-      color: #fff;
-    }
+  }
+  a:before{
+    content: "\f002";
+    font-size: 15px;
+    font-family: 'icomoon';
+    color: #fff;
+    position: absolute;
+    top: 23%;
+    left: 41%;
+  }
+  button:before{
+    content: "\f002";
+    font-size: 15px;
+    font-family: 'icomoon';
+    color: #fff;
+    position: absolute;
+    left: 41%;
+    top: 30%;
   }
 }
 .pages-box{
@@ -786,6 +801,7 @@
   }
   .jq-selectbox__dropdown{
     z-index: 5;
+    top: 54px;
     ul{
       width: 100%;
       background-color: #fff;
@@ -820,16 +836,15 @@
   height: 401px;
   text-align: center;
   margin: 0 10px;
-}
-.info-item__main{
-  background-color: #fff;
-  box-shadow: 0 2px 50px rgba(0, 0, 0, 0.08);
+  transition: all .3s ease-out;
+  &:hover{
+    transform: scale(1.1);
+  }
 }
 .info-item__img{
-  margin: 0 auto;
+  margin: 0 auto 30px;
   width: 112px;
   height: 113px;
-  margin-bottom: 30px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1029,12 +1044,14 @@
 .new-products__title{
   display: flex;
   justify-content: space-between;
+
   span{
     font-size: 16px;
     color: #747b86;
   }
   .jq-selectbox .jqselect{
     width: 100px;
+    margin-top: 8px;
   }
   .jq-selectbox__select{
     width: 100px;
@@ -1121,6 +1138,7 @@
     flex-basis: calc(33.3333% - 30px);
     margin-left: 29px;
     margin-bottom: 29px;
+    max-width: 100%;
   }
 }
 .product-item{
@@ -1133,8 +1151,7 @@
   position: relative;
 }
 .product-item__img{
-  width: 361px;
-  height: 231px;
+  min-height: 231px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -1597,13 +1614,9 @@
 .news-views{
   display: flex;
   justify-content: space-between;
-  max-width: 180px;
-  width: 100%;
   border-left: 1px solid #ececec;
 }
 .news-data{
-  max-width: 180px;
-  width: 100%;
   font-size: 15px;
   color: #999999;
   padding-left: 25px;
@@ -1626,6 +1639,7 @@
   }
 }
 .news-views__view{
+  margin-left: 15px;
   &:before{
     font-size: 15px;
     font-family: 'icomoon';
@@ -1698,6 +1712,7 @@
   background-color: #ffffff;
   color: $blue;
   transition: all .4s;
+  margin-right: 0;
   &:hover{
     background-color: #1b34ce;
     color: #fff;
@@ -1724,6 +1739,7 @@
   font-size: 15px;
   a{
     color: #ababab;
+    display: block;
   }
 }
 .footer-item__col{
@@ -1799,6 +1815,7 @@
     border-radius: 50%;
     position: relative;
     background-color: #395799;
+    margin: 0 5px;
     &:before{
       position: absolute;
       font-size: 16px;
@@ -1808,9 +1825,6 @@
       right: 50%;
       transform: translate(50%, -50%);
     }
-  }
-  & span + span, a +a {
-    margin-left: 13px;
   }
   .icon-twitter{
     background-color: #19b2f5;
@@ -2324,6 +2338,7 @@
     font-size: 15px;
     @include f500;
     color: #0674ec;
+    white-space: pre;
     padding: 4px 20px;
     border-radius: 15px;
     background-color: #e6f1fd;
@@ -2433,6 +2448,7 @@
           left: 15px;
         }
         a{
+          white-space: pre;
           margin-left: 28px;
           margin-bottom: 28px;
         }
@@ -3135,7 +3151,12 @@
   justify-content: flex-start;
   margin-left: -30px;
   align-items: center;
-
+}
+.more-item .more-item__inner{
+  .favorites-item{
+    min-height: 500px;
+    height: 100%;
+  }
 }
 //end single-product
 //start 404err
@@ -3208,7 +3229,6 @@
 }
 .become-auth__img{
   width: 458px;
-  height: 35px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -3230,8 +3250,11 @@
   .terms__inner-title,h2,h3,h4{
     color: #000;
     font-size: 24px;
-    padding: 40px 30px 30px;
+    padding: 0 30px 30px;
     border-bottom: 1px solid #ececec;
+    &:first-child{
+      padding-top: 30px;
+    }
   }
   p,.terms__inner-text{
     margin: 30px 30px 0;
@@ -3361,7 +3384,8 @@
   padding: 70px 0 100px;
 }
 .email__inner{
-  width: 555px;
+  max-width: 555px;
+  width: 100%;
   margin: 0 auto;
   height: 100%;
   box-shadow: 0 2px 4px rgba(108, 111, 115, 0.1);
@@ -3566,7 +3590,6 @@
   display: grid;
 }
 .contact-us__item{
-  //width: 360px;
   box-shadow: 0 2px 4px rgba(108, 111, 115, 0.1);
   border-radius: 4px;
   background-color: #ffffff;
@@ -3918,6 +3941,22 @@
     }
   }
 }
+.menu-list__btn{
+  display: none;
+  width: 50px;
+  height: 50px;
+  position: relative;
+  &:before{
+    font-size: 30px;
+    font-family: 'icomoon';
+    color: #dedede;
+    top: 50%;
+    right: 50%;
+    position: absolute;
+    transform: translate(50%, -50%);
+  }
+}
+
 // end blog
 //start
 @import "media";
